--- a/1주차/강의안.md
+++ b/1주차/강의안.md
@@ -20,7 +20,7 @@
 
 </aside>
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/3aea4a2a-37c3-4ba0-b048-b90c4aa38f4d/31f14fdf-1ee9-4cc3-8693-457f115a35d2/Untitled.png)
+[img1](../1주차/img/사진1.png)
 
 기계어와 가까울 수록 저급 언어(Low-level Language)
 
@@ -40,10 +40,10 @@
 ### 컴파일러란?
 
 프로그래밍 언어로 작성한 명령어를 기계어로 바꾸어주는 프로그램
-
 소스파일에서 기계어로 작성된 목적파일(object file)을 만들어내는 프로그램
 
-![사진1.jpg](https://prod-files-secure.s3.us-west-2.amazonaws.com/3aea4a2a-37c3-4ba0-b048-b90c4aa38f4d/dfeadb7b-b4f1-452e-8bda-e0d9fea658f7/%EC%82%AC%EC%A7%841.jpg)
+[img2](../1주차/img/사진2.png)
+
 
 ### 프로그램 구현 과정
 
@@ -51,20 +51,18 @@
 2. 작성한 프로그램의 컴파일
 3. 컴파일 된 결과물의 링크
 
-![사진2.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/3aea4a2a-37c3-4ba0-b048-b90c4aa38f4d/f69c01fd-38a9-47a1-8fee-84ebc85239a9/%EC%82%AC%EC%A7%842.png)
+[img3](../1주차/img/사진3.png)
+
 
 - 소스 파일
     프로그래밍 언어로 일련의 명령어가 저장된 파일 (.c, .java 등)
 
 - 링크
     링커가 수행하는 과정
-
     여러 개의 목적 파일을 연결하여 하나의 실행 파일을 생성해주는 과정
-
     참조하는 여러 라이브러리를 포함 시킴
 
 - 라이브러리
-
     자주 사용하는 프로그램을 이미 만들어 놓고 사용하는 모듈
 
 ### 디버깅
@@ -83,13 +81,11 @@
 
 하나의 main() 함수 만을 포함
 
-[실습](HelloWorld.c)
+### 실습 !!!
+[HelloWorld.c](HelloWorld.c)
 
 
 출처
-
 (교재) 윤성우의 열혈 C 프로그래밍
-
 (참고 교재) Perfect C : C언어로 배우는 프로그래밍 기초
-
 https://blog.naver.com/tipsware/221041215416
