--- a/1주차/강의안.md
+++ b/1주차/강의안.md
@@ -42,7 +42,7 @@
 프로그래밍 언어로 작성한 명령어를 기계어로 바꾸어주는 프로그램
 소스파일에서 기계어로 작성된 목적파일(object file)을 만들어내는 프로그램
 
-[img2](../1주차/img/사진2.png)
+![img2](../1주차/img/사진2.png)
 
 
 ### 프로그램 구현 과정
@@ -51,19 +51,19 @@
 2. 작성한 프로그램의 컴파일
 3. 컴파일 된 결과물의 링크
 
-[img3](../1주차/img/사진3.png)
+![img3](../1주차/img/사진3.png)
 
 
 - 소스 파일
-    프로그래밍 언어로 일련의 명령어가 저장된 파일 (.c, .java 등)
+  - 프로그래밍 언어로 일련의 명령어가 저장된 파일 (.c, .java 등)
 
 - 링크
-    링커가 수행하는 과정
-    여러 개의 목적 파일을 연결하여 하나의 실행 파일을 생성해주는 과정
-    참조하는 여러 라이브러리를 포함 시킴
+  - 링커가 수행하는 과정
+  - 여러 개의 목적 파일을 연결하여 하나의 실행 파일을 생성해주는 과정
+  - 참조하는 여러 라이브러리를 포함 시킴
 
 - 라이브러리
-    자주 사용하는 프로그램을 이미 만들어 놓고 사용하는 모듈
+  - 자주 사용하는 프로그램을 이미 만들어 놓고 사용하는 모듈
 
 ### 디버깅
 
