--- a/1주차/강의안.md
+++ b/1주차/강의안.md
@@ -42,7 +42,7 @@
 프로그래밍 언어로 작성한 명령어를 기계어로 바꾸어주는 프로그램
 소스파일에서 기계어로 작성된 목적파일(object file)을 만들어내는 프로그램
 
-![img2](../1주차/img/사진2.png)
+![img2](../1주차/img/사진2.jpg)
 
 
 ### 프로그램 구현 과정
