--- a/3주차/강의안.md
+++ b/3주차/강의안.md
@@ -1,4 +1,4 @@
-# 3주차 강의안(해피추석) (논리연산자, 조건문)
+f# 3주차 강의안(해피추석) (논리연산자, 조건문)
 
 # 논리 연산자
 
@@ -52,7 +52,7 @@ int main()
 그냥 &, 그냥 | 은 논리연산자 아니고 비트연산자!
 
 비트연산자는 프기or기프 시험 아니면 한동안 잘 쓸 일 없을거라.. 여기서는 그냥 패스할게요
-공부하고 싶으신분은 카톡주세용
+공부해보고 싶으신분은 카톡주세용
 
 ```c
 #include <stdio.h>
